Fix map size on mobile

--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@
     }
   
     .bz-store-map-wrapper {
-      width: 97%;
+      width: 85%;
     }
 
     .map-embed-wrapper {
